multi-user-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeflow-user-negin
  labels:
    katib.kubeflow.org/metrics-collector-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubeflow-user-yousef
  labels:
    katib.kubeflow.org/metrics-collector-injection: enabled
