katib-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: katib-db-manager
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: katib-db-manager
  template:
    metadata:
      labels:
        app: katib-db-manager
    spec:
      containers:
      - name: katib-db-manager
        image: kubeflow/katib-db-manager:v0.15.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6789
          name: api
---
apiVersion: v1
kind: Service
metadata:
  name: katib-db-manager
  namespace: kubeflow
spec:
  ports:
  - port: 6789
    targetPort: 6789
  selector:
    app: katib-db-manager
