vscode.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
spec:
  clusterIP: None
  selector:
    app: code-server
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: code-server
spec:
  serviceName: "code-server"
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: code-server
        image: code-server-python:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        args: ["/home/coder/project"]
        volumeMounts:
        - name: workspace-data
          mountPath: /home/coder/project
  volumeClaimTemplates:
  - metadata:
      name: workspace-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
