istio-networking.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vscode-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vscode-vs
spec:
  hosts:
  - "*"
  gateways:
  - vscode-gateway
  http:
  - match:
    - uri:
        prefix: /vscode
    rewrite:
      uri: /
    route:
    - destination:
        host: code-server
        port:
          number: 8080
  - route:
    - destination:
        host: code-server
        port:
          number: 8080
